--- a/project-dashboard/index.html
+++ b/project-dashboard/index.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Project Dashboard</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-  <section class="dashboard">
-    <h1>Dashboard</h1>
-    <table>
-      <tbody>
-        <tr>
-          <td>Home</td>
-        </tr>
-        <tr>
-          <td>Profile</td>
-          </tr>
-      </tbody>
-        <tr>
-            <td>Messages</td>
-            </tr>
-            
-        <tr>
-            <td>History</td>
-        </tr>
-        <tr>
-            <td>Tasks</td>
-         </tr>
-        <tr>
-            <td>Communities</td>
-        </tr>
-
-    </table>
-  </section>
+    <header>
+       <h1>Dashboard</h1>
+    </header>
+    <aside>
+      <button id="sidebar-toggle">Toggle Sidebar</button>
+      <nav>
+          <ul>
+              <li><a href="#">Dashboard</a></li>
+              <li><a href="#">Orders</a></li>
+              <li><a href="#">Customers</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Settings</a></li>
+          </ul>
+      </nav>
+    </aside>
+    <main>
+      <h1>Project Dashboard</h1>
+      <div class="cards">
+          <div class="card">
+              <h2>Card 1</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="card">
+              <h2>Card 2</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="card">
+              <h2>Card 3</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="card">
+              <h2>Card 4</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+      </div>
+    </main>
+    
+    <footer>
+        <!-- Footer content goes here -->
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
